fixed spacing, making graphs a little bigger

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@ main {
 	height: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 33% 33%;
+	grid-template-rows: 20% 1fr 1fr;
 	justify-items: center;
 	align-items: center;
 	grid-row-gap: 32px;
